--- a/Application/front-end/src/widgets/video/video.module.css
+++ b/Application/front-end/src/widgets/video/video.module.css
@@ -98,6 +98,9 @@
 }
 
 .video_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 
@@ -145,5 +148,15 @@
         width: 70%;
       }
     }
+  }
+}
+
+
+@media(max-width: 800px) {
+  :root {
+    --video-width: 100%;
+  }
+  .video_list {
+    justify-content: center;
   }
 }
