--- a/Application/front-end/public/colors.css
+++ b/Application/front-end/public/colors.css
@@ -1,7 +1,10 @@
 :root {
   --ghost-color: #ffffff33;
   --current-color: #000;
+  --light-block-color: #f0f0f0;
+  --block-color: #f0f0f0;
   --images-glow: #666;
+  --light-selected-block: #D9D9D9;
   --selected-block: #D9D9D9;
   --default-image-filter: drop-shadow(1px 1px 2px var(--images-glow));
   --secondary-font-color: #BBB;
@@ -14,6 +17,7 @@
     color-scheme: dark;
     --ghost-color: #ffffff33;
     --current-color: #fff;
+    --block-color: #BABABA;
     --images-glow: #aaa;
     --selected-block: #6b6b6b;
     --default-image-filter: invert(1) drop-shadow(1px 1px 2px var(--images-glow));
@@ -24,4 +28,9 @@
   filter: var(--default-image-filter);
   -webkit-user-select: none;
   user-select: none;
+}
+
+.block {
+  border-radius: 10px;
+  background-color: var(--block-color);
 }
