--- a/Application/front-end/public/global.css
+++ b/Application/front-end/public/global.css
@@ -1,20 +1,20 @@
 :root {
-    --font-size: clamp(0.8rem, 1vw, 2rem);
+  --font-size: clamp(0.8rem, 1vw, 2rem);
 }
 
 * {
-    padding: 0;
-    margin: 0;
-    font-size: var(--font-size);
+  padding: 0;
+  margin: 0;
+  font-size: var(--font-size);
 }
 
 a {
-    color: currentColor;
-    text-decoration: none;
-    
-    &:hover {
-        text-decoration: underline;
-    }
+  color: currentColor;
+  text-decoration: none;
+  
+  &:hover {
+      text-decoration: underline;
+  }
 }
 
 /* -------------------- */
@@ -63,14 +63,9 @@ footer {
 
 header {
   z-index: 100;
-  background-color: Window;
+  background-color: Canvas;
   position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.block {
-  border-radius: 10px;
-  background-color: #BABABA;
 }
