--- a/Application/front-end/src/shared/ui/forms/forms.module.css
+++ b/Application/front-end/src/shared/ui/forms/forms.module.css
@@ -1,4 +1,39 @@
 .form {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  gap: 1rem;
+}
+
+.standart_form {
+  width: clamp(23rem, 30vw, 25rem);
+  min-height: 70vh;
+  border-radius: 2rem;
+  padding-top: 2%;
+
+  background-color: white;
+  color: black;
+
+  * {
+    font-weight: bold;
+    font-size: small;
+  }
+}
+
+.standart_input {
+  background-color: var(--light-selected-block);
+  --standart-input-padding-left: 5px;
+
+  height: 2.6rem;
+  padding-left: var(--standart-input-padding-left);
+  width: calc(100% - var(--standart-input-padding-left));
+}
+
+.standart_button {
+  height: 3rem;
+}
+
+.password_link {
+  color: #00d385;
 }
