--- a/Application/front-end/src/widgets/menu/menu.module.css
+++ b/Application/front-end/src/widgets/menu/menu.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital,wght@0,300..700;1,300..700&display=swap');
+
 .group {
   display: flex;
   flex-direction: column;
@@ -9,6 +11,10 @@
   margin-right: 1.4rem;
   position: sticky;
   top: var(--header-height);
+
+  font-family: "Inclusive Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 #menu, #selected_menu {
@@ -40,6 +46,35 @@
     width: 1.5vw;
   }
 }
+
+:root {
+  --mobile-menu-height: 5rem;
+}
+
+#content {
+  margin-bottom: var(--mobile-menu-height);
+}
+
+#mobile_menu {
+  z-index: 100;
+  width: 100vw;
+  height: var(--mobile-menu-height);
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: Canvas;
+
+  display: flex;
+  justify-content: space-around;
+}
+
+.mobile_menu_item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 
 @media(max-width: 800px) {
   .groups, #menu {
