--- a/Application/front-end/src/widgets/video/video.module.css
+++ b/Application/front-end/src/widgets/video/video.module.css
@@ -11,8 +11,10 @@
   word-break: break-word;
 
   video {
-    width: 100%;
+    aspect-ratio: 16 / 9;
+    max-width: 100%;
     border-radius: 12px;
+    background: #00000033;
   }
 
   a {
@@ -32,7 +34,6 @@
   }
 
   .video_card_title {
-    min-height: 3rem;
 
     a, p {
       font-size: large;
@@ -50,6 +51,8 @@
   .video_card_channel {
     align-items: center;
     gap: 6px;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
 
     p {
       color: var(--secondary-font-color);
@@ -93,7 +96,6 @@
 .video_card_more_info {
   position: absolute;
   top: 2rem;
-  left: 2.5rem;
   width: max-content;
 }
 
